docs(api): make the SKIP_JAVA_CHECK read intentional and guarded
Closes audit finding L-2. The previous fix put the getJavaVersion call OUTSIDE
the SKIP_JAVA_CHECK conditional, so the version is now read even when a user
asked for checks to be skipped. That consequence went undisclosed, on a setting
used by people doing something unusual.

The behaviour is right and stays. variables.txt documents the setting as
disabling "the compatibility check of your Minecraft version and the provided
Java version, as well as the automatic installation" — comparing and installing,
not looking. And reading it serves precisely the user the setting is aimed at:
variables.txt tells anyone pointing JAVA at a custom path to set
SKIP_JAVA_CHECK=true, so that user has a deliberately chosen working Java, and
resolving it is what keeps them on the ServerStarterJar path for Java 17/21
instead of being pushed onto the self-install path with everyone else.

What was missing was that nothing said so and nothing guarded it. Now:

- variables.txt says the version is still READ when the check is skipped, why
  Forge needs to know, and what happens when it cannot be read.
- theBashTemplateResolvesTheJavaVersionEvenWhenChecksAreSkipped EXECUTES the
  shipped Java-check block with SKIP_JAVA_CHECK=true against a fake Java, and
  asserts both halves: the version resolves (17 from a readable Java, empty from
  an unreadable one, which the fail-safe guard then routes away from the fatal
  flag) AND the automatic installation is still skipped, which is what the
  setting actually promises.
- serverpackcreator-api/CLAUDE.md records why the call sits outside the
  conditional, so it does not get "tidied" back inside.

Teeth verified: moving the resolve call back inside the block fails the new
test, and it passes again on restore.

api 307 (1 skip) — full build green.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>